static/styles.css
body {
    padding: 50px;
}

h1,
p {
    text-align: center;
    margin-bottom: 25px;
}

form {
    padding: 50px;
}

input,
textarea {
    margin-bottom: 25px;
}

textarea {
    height: 250px;
}

